--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -105,7 +105,7 @@
     "@jax.vmap\n",
     "def normalize_image_stack(image):\n",
     "    \"\"\"Normalize a stack of images to have mean 0 and std 1.\"\"\"\n",
-    "    return normalize_image(image, is_real=True)\n",
+    "    return normalize_image(image, input_is_real_space=True)\n",
     "\n",
     "\n",
     "# Load the dataset and index three particles in this dataset\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
     "    and per-particle parameters in the `pipeline`.\n",
     "    \"\"\"\n",
     "    pipeline = eqx.combine(pipeline_vmap, pipeline_novmap)\n",
-    "    fourier_simulated_image = pipeline.render(get_real=False)\n",
+    "    fourier_simulated_image = pipeline.render(outputs_real_space=False)\n",
     "    return irfftn(\n",
     "        fourier_observed_image * jnp.conj(fourier_simulated_image),\n",
     "        s=pipeline.instrument_config.shape,\n",
@@ -284,7 +284,7 @@
     "    )\n",
     "    pipeline = eqx.combine(pipeline_at_grid_point, pipeline_not_at_grid_point)\n",
     "\n",
-    "    return pipeline.render(get_real=False)"
+    "    return pipeline.render(outputs_real_space=False)"
    ]
   },
   {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
     "    pipeline_vmap, pipeline_novmap, fourier_observed_image\n",
     "):\n",
     "    pipeline = eqx.combine(pipeline_vmap, pipeline_novmap)\n",
-    "    fourier_simulated_image = pipeline.render(get_real=False)\n",
+    "    fourier_simulated_image = pipeline.render(outputs_real_space=False)\n",
     "    return (\n",
     "        irfftn(\n",
     "            fourier_observed_image * jnp.conj(fourier_simulated_image),\n",
