--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -269,7 +269,7 @@
     "parameter_reader = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./relion_dataset.star\",  # starfile we created\n",
     "    path_to_relion_project=path_to_mrc_files,  # here is where the mrcs will be saved\n",
-    "    is_loading_envelope_function=True,\n",
+    "    loads_envelope=True,\n",
     ")"
    ]
   },
@@ -289,13 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = \"./data/groel_chainA.pdb\"\n",
     "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
-    "    filename, center=True, select=\"not element H\", get_b_factors=True\n",
+    "    filename, center=True, select=\"not element H\", loads_b_factors=True\n",
     ")\n",
     "atomic_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)\n",
     "\n",
@@ -479,7 +479,7 @@
     "parameter_reader_for_noise_images = RelionParticleParameterReader(\n",
     "    path_to_starfile=\"./relion_dataset.star\",  # starfile we created\n",
     "    path_to_relion_project=path_to_mrc_files,  # here is where the mrcs will be saved\n",
-    "    is_loading_envelope_function=True,\n",
+    "    loads_envelope=True,\n",
     ")"
    ]
   },
