--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
     "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
-    "    atom_filter=\"not element H\",\n",
-    "    get_b_factors=True,\n",
+    "    select=\"not element H\",\n",
+    "    loads_b_factors=True,\n",
     ")\n",
     "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)\n",
     "\n",
@@ -199,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
