overhaul for more general placement of amplitude contrast ratio, including a small API overhaul for more generic usage of CTFs in cryojax. addresses #355

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
    ],
    "source": [
     "# Inspect the CTF\n",
-    "eqx.tree_pprint(relion_particles.parameters.transfer_theory.ctf, short_arrays=False)"
+    "eqx.tree_pprint(relion_particles.parameters.transfer_theory, short_arrays=False)"
    ]
   },
   {
