--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +116,8 @@
     "    defocus_in_angstroms=10000.0,\n",
     "    astigmatism_in_angstroms=-100.0,\n",
     "    astigmatism_angle=10.0,\n",
-    "    amplitude_contrast_ratio=0.1,\n",
     ")\n",
-    "transfer_theory = cxs.ContrastTransferTheory(ctf)\n",
+    "transfer_theory = cxs.ContrastTransferTheory(ctf, amplitude_contrast_ratio=0.1)\n",
     "# ... add a non-white noise model for the solvent, choosing the characteristic\n",
     "# strength to be a fraction of the integrated specimen potential\n",
     "strength = 0.05 * real_voxel_grid.sum(axis=0).max() * voxel_size\n",
