--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +117,7 @@
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
     "    make_config_fn=make_config_fn,\n",
+    "    broadcasts_optics_group=True,\n",
     ")\n",
     "particle_reader = RelionParticleStackReader(parameter_reader)\n",
     "particle_stack = particle_reader[:3]\n",
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
     "# optics group.\n",
     "per_particle_filter_spec = get_filter_spec(\n",
     "    imaging_pipeline,\n",
-    "    lambda p: (p.scattering_theory.transfer_theory.ctf, p.instrument_config),\n",
+    "    lambda p: (p.scattering_theory.transfer_theory, p.instrument_config),\n",
     ")\n",
     "\n",
     "\n",
@@ -402,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c70c9bd168ee41dd86cf86f32fa51879",
+       "model_id": "84f261b3c4784d71afb42e0e8a0788cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -485,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
