--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1649fa500>"
+       "<matplotlib.colorbar.Colorbar at 0x30d9e3370>"
       ]
      },
      "execution_count": 4,
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,10 +219,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x16386d390>"
+       "<matplotlib.colorbar.Colorbar at 0x30f61e410>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
