--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -112,7 +112,7 @@
     "# Initialize the scattering theory. First, instantiate fourier slice extraction\n",
     "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... next, the contrast transfer theory\n",
-    "ctf = cxs.ContrastTransferFunction(\n",
+    "ctf = cxs.CTF(\n",
     "    defocus_in_angstroms=10000.0,\n",
     "    astigmatism_in_angstroms=-100.0,\n",
     "    astigmatism_angle=10.0,\n",
