--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -77,7 +77,7 @@
     "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "# ... and the contrast transfer theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(\n",
-    "    ctf=cxs.ContrastTransferFunction(\n",
+    "    ctf=cxs.AberratedAstigmaticCTF(\n",
     "        defocus_in_angstroms=10000.0,\n",
     "        astigmatism_in_angstroms=0.0,\n",
     "    )\n",
@@ -203,15 +203,15 @@
       "      interpolation_cval=None\n",
       "    ),\n",
       "    transfer_theory=ContrastTransferTheory(\n",
-      "      ctf=ContrastTransferFunction(\n",
+      "      ctf=AberratedAstigmaticCTF(\n",
       "        defocus_in_angstroms=None,\n",
       "        astigmatism_in_angstroms=None,\n",
       "        astigmatism_angle=None,\n",
-      "        spherical_aberration_in_mm=None,\n",
-      "        amplitude_contrast_ratio=None,\n",
-      "        phase_shift=None\n",
+      "        spherical_aberration_in_mm=None\n",
       "      ),\n",
-      "      envelope=None\n",
+      "      envelope=None,\n",
+      "      amplitude_contrast_ratio=None,\n",
+      "      phase_shift=None\n",
       "    ),\n",
       "    solvent=None\n",
       "  ),\n",
