--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
     "\n",
     "import cryojax.simulator as cxs\n",
     "from cryojax.data import (\n",
-    "    ParticleParameters,\n",
     "    RelionParticleParameterReader,\n",
+    "    RelionParticleParameters,\n",
     "    RelionParticleStackReader,\n",
     "    write_simulated_image_stack_from_starfile,\n",
     "    write_starfile_with_particle_parameters,\n",
@@ -159,13 +159,13 @@
     "            astigmatism_in_angstroms=astigmatism_in_angstroms,\n",
     "            astigmatism_angle=astigmatism_angle,\n",
     "            spherical_aberration_in_mm=spherical_aberration_in_mm,\n",
-    "            amplitude_contrast_ratio=amplitude_contrast_ratio,\n",
-    "            phase_shift=phase_shift,\n",
     "        ),\n",
     "        envelope=op.FourierGaussian(b_factor=b_factor, amplitude=ctf_scale_factor),\n",
+    "        amplitude_contrast_ratio=amplitude_contrast_ratio,\n",
+    "        phase_shift=phase_shift,\n",
     "    )\n",
     "\n",
-    "    particle_parameters = ParticleParameters(\n",
+    "    particle_parameters = RelionParticleParameters(\n",
     "        instrument_config=instrument_config,\n",
     "        pose=pose,\n",
     "        transfer_theory=transfer_theory,\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
     "\n",
     "\n",
     "def build_imaging_pipeline_from_particle_parameters(\n",
-    "    relion_particle_parameters: ParticleParameters,\n",
+    "    relion_particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
     ") -> cxs.ContrastImagingPipeline:\n",
     "    potential, potential_integrator = args\n",
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "def compute_image(\n",
-    "    particle_parameters: ParticleParameters,\n",
+    "    particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
     "):\n",
     "    imaging_pipeline = build_imaging_pipeline_from_particle_parameters(\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
     "    The arguments to call this function are:\n",
     "\n",
     "    - `parameter_reader`: needs to be an instance of `RelionParticleParameterReader`\n",
-    "    - `compute_image`: function that should take (ParticleParameters, args) or (jax.PRNGKey, ParticleParameters, args) as input\n",
+    "    - `compute_image`: function that should take (RelionParticleParameters, args) or (jax.PRNGKey, RelionParticleParameters, args) as input\n",
     "    - `args`: the args for `compute_image` function\n",
     "    - `is_jittable`: whether or not your function can be jitted with `equinox.filter_jit`. (If you are not sure, run it and set it to False if it does not work)\n",
     "    - `batch_size_per_mrc`: if your function is jittable we will vmap the computation of the images, which might have a big memory usage. If you get some \"Ran out of memory\" error, then adjust this batch size. Setting it to \"None\" will assume no batching needs to be done. Setting it to 1 runs the code in serial mode.\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will follow a simular approach as before. First, let's write a function that generates a distribution from a `ParticleParameters`:"
+    "We will follow a simular approach as before. First, let's write a function that generates a distribution from a `RelionParticleParameters`:"
    ]
   },
   {
@@ -507,7 +507,7 @@
     "\n",
     "\n",
     "def build_distribution_from_particle_parameters(\n",
-    "    particle_parameters: ParticleParameters,\n",
+    "    particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
     ") -> dist.IndependentGaussianFourierModes:\n",
     "    potential, potential_integrator = args\n",
@@ -545,7 +545,7 @@
    "source": [
     "def compute_image_with_noise(\n",
     "    key: PRNGKeyArray,\n",
-    "    relion_particle_parameters: ParticleParameters,\n",
+    "    relion_particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
     "):\n",
     "    distribution = build_distribution_from_particle_parameters(\n",
@@ -602,74 +602,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n",
-      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
-      "  x = um.multiply(x, x, out=x)\n"
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n",
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n",
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n",
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n",
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n",
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n",
+      "/Users/michael/mambaforge/envs/cryojax/lib/python3.10/site-packages/mrcfile/mrcobject.py:626: RuntimeWarning: Data array contains NaN values\n",
+      "  warnings.warn(\"Data array contains NaN values\", RuntimeWarning)\n"
      ]
     }
    ],
@@ -694,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
