adjust parameters vs stack interface

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -60,8 +60,8 @@
     "!!! info \"What is a `RelionParticleStackReader`?\"\n",
     "\n",
     "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleStackReader`. This object takes in a\n",
-    "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `RelionParticleStack`\n",
-    "    is returned. Specifically, the `RelionParticleStack` stores the image(s) in the image stack, as well as the parameters, represented as a `RelionParticleParameters` container,\n",
+    "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `ParticleStack`\n",
+    "    is returned. Specifically, the `ParticleStack` stores the image(s) in the image stack, as well as the parameters, here represented as a `RelionParticleParameters` container,\n",
     "    in the STAR file. The metadata instantiates compatible `cryojax` objects. For example, the `RelionParticleParameters`\n",
     "    stores a `cryojax` models for the contrast transfer function (the `CTF` class) and the pose (the `EulerAnglePose` class).\n",
     "\n",
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upon inspecting the zeroth element of the `RelionParticleDataset`, we see that a `RelionParticleStack` is returned. We can access a particular image by accessing the `RelionParticleStack.images`. Let's normalize this image, plot it, and make sure the mean and standard deviation are zero and one, respectively."
+    "Upon inspecting the zeroth element of the `RelionParticleStackReader`, we see that a `ParticleStack` is returned. We can access a particular image by accessing the `ParticleStack.images`. Let's normalize this image, plot it, and make sure the mean and standard deviation are zero and one, respectively."
    ]
   },
   {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
