setup generalization to writing with __setitem__. rename back to dataset as a result

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -48,24 +48,24 @@
    "outputs": [],
    "source": [
     "# CryoJAX imports\n",
-    "from cryojax.data import RelionParticleParameterReader, RelionParticleStackReader"
+    "from cryojax.data import RelionParticleParameterDataset, RelionParticleStackDataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionParticleStackReader`.\n",
+    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionParticleStackDataset`.\n",
     "\n",
-    "!!! info \"What is a `RelionParticleStackReader`?\"\n",
+    "!!! info \"What is a `RelionParticleStackDataset`?\"\n",
     "\n",
-    "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleStackReader`. This object takes in a\n",
+    "    CryoJAX implements an abstraction an a dataset in RELION, called a `RelionParticleStackDataset`. This object takes in a\n",
     "    RELION STAR file for a particle stack. Upon accessing an image in the particle stack, a `ParticleStack`\n",
     "    is returned. Specifically, the `ParticleStack` stores the image(s) in the image stack, as well as the parameters, here represented as a `RelionParticleParameters` container,\n",
     "    in the STAR file. The metadata instantiates compatible `cryojax` objects. For example, the `RelionParticleParameters`\n",
     "    stores a `cryojax` models for the contrast transfer function (the `CTF` class) and the pose (the `EulerAnglePose` class).\n",
     "\n",
-    "    More generally, a `RelionParticleStackReader` is an `AbstractDataset`.\n",
+    "    More generally, a `RelionParticleStackDataset` is an `AbstractDataset`.\n",
     "    This abstract interface are part of the `cryojax` public API!"
    ]
   },
@@ -76,23 +76,23 @@
    "outputs": [],
    "source": [
     "# Read in the dataset and plot an image\n",
-    "param_reader = RelionParticleParameterReader(\n",
+    "param_dataset = RelionParticleParameterDataset(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
     "    loads_metadata=False,  # Set to `True` to load the raw starfile metadata\n",
     "    broadcasts_optics_group=True,  # If `True`, this is useful for vmapping\n",
     "    loads_envelope=False,  # If `False`, assumes b_factor is 0 and CTF amplitude is 1\n",
     ")\n",
-    "particle_reader = RelionParticleStackReader(param_reader)\n",
+    "particle_dataset = RelionParticleStackDataset(param_dataset)\n",
     "# ... get the zeroth entry in the STAR file\n",
-    "relion_particle = particle_reader[0]"
+    "relion_particle = particle_dataset[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upon inspecting the zeroth element of the `RelionParticleStackReader`, we see that a `ParticleStack` is returned. We can access a particular image by accessing the `ParticleStack.images`. Let's normalize this image, plot it, and make sure the mean and standard deviation are zero and one, respectively."
+    "Upon inspecting the zeroth element of the `RelionParticleStackDataset`, we see that a `ParticleStack` is returned. We can access a particular image by accessing the `ParticleStack.images`. Let's normalize this image, plot it, and make sure the mean and standard deviation are zero and one, respectively."
    ]
   },
   {
@@ -158,7 +158,7 @@
    ],
    "source": [
     "# Access multiple images in the stack\n",
-    "relion_particles = particle_reader[0:3]\n",
+    "relion_particles = particle_dataset[0:3]\n",
     "print(relion_particles.images.shape)"
    ]
   },
@@ -264,7 +264,7 @@
     "\n",
     "\n",
     "# Get the particle\n",
-    "relion_particle = particle_reader[0]\n",
+    "relion_particle = particle_dataset[0]\n",
     "# ... and the image in fourier space\n",
     "fourier_image = rfftn(relion_particle.images)\n",
     "# ... and the cartesian coordinate system\n",
