euler angle rename...

--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,9 @@
     "pose = cxs.EulerAnglePose(\n",
     "    offset_x_in_angstroms=6.0,\n",
     "    offset_y_in_angstroms=-7.0,\n",
-    "    view_theta=90.0,\n",
-    "    view_psi=20.0,\n",
-    "    view_phi=0.0,\n",
+    "    theta_angle=90.0,\n",
+    "    psi_angle=20.0,\n",
+    "    phi_angle=0.0,\n",
     ")\n",
     "structural_ensemble = cxs.SingleStructureEnsemble(voxel_potential, pose)\n",
     "\n",
