--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,9 @@
     "pose = cxs.EulerAnglePose(\n",
     "    offset_x_in_angstroms=5.0,\n",
     "    offset_y_in_angstroms=-3.0,\n",
-    "    view_phi=20.0,\n",
-    "    view_theta=80.0,\n",
-    "    view_psi=-5.0,\n",
+    "    phi_angle=20.0,\n",
+    "    theta_angle=80.0,\n",
+    "    psi_angle=-5.0,\n",
     ")\n",
     "# ... now, build the ensemble. In this case, the ensemble is just one potential and a\n",
     "# pose\n",
