--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -224,16 +224,16 @@
    "source": [
     "We can also inspect a different viewing angle by rotating the `voxel_potential` to a different pose. This involves instantiating a `cryojax` representation of a pose, which here is the `cryojax.simulator.EulerAnglePose`. The three euler angles in this object are:\n",
     "\n",
-    "- The first euler angle $\\phi$, denoted `view_phi`\n",
-    "- The second euler angle $\\theta$, denoted `view_theta`\n",
-    "- The third euler angle $\\psi$, denoted `view_psi`\n",
+    "- The first euler angle $\\phi$, denoted `phi_angle`\n",
+    "- The second euler angle $\\theta$, denoted `theta_angle`\n",
+    "- The third euler angle $\\psi$, denoted `psi_angle`\n",
     "\n",
     "The euler angle convention in `cryojax` is a zyz extrinsic rotation, which follows other standard cryo-EM software, such as RELION and cisTEM."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
    "source": [
     "# Instantiate the pose and rotate the potential\n",
     "# ... angles are in degrees\n",
-    "pose = cxs.EulerAnglePose(view_phi=0.0, view_theta=90.0, view_psi=90.0)\n",
+    "pose = cxs.EulerAnglePose(phi_angle=0.0, theta_angle=90.0, psi_angle=90.0)\n",
     "rotated_voxel_potential = voxel_potential.rotate_to_pose(pose)\n",
     "# ... again compute the projection integral\n",
     "integrated_potential = compute_projection(rotated_voxel_potential)\n",
