--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -76,12 +76,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, load a particle stack on which to run the grid search. The particle stack will be loaded from a STAR file with the `RelionParticleImageReader` interface. See the [Read a particle stack](https://mjo22.github.io/cryojax/examples/read-dataset/) tutorial for more information."
+    "Now, load a particle stack on which to run the grid search. The particle stack will be loaded from a STAR file with the `RelionParticleImageDataset` interface. See the [Read a particle stack](https://mjo22.github.io/cryojax/examples/read-dataset/) tutorial for more information."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
    "source": [
     "import jax\n",
     "\n",
-    "from cryojax.data import RelionParticleParameterReader, RelionParticleStackReader\n",
+    "from cryojax.data import RelionParticleParameterDataset, RelionParticleStackDataset\n",
     "from cryojax.image import normalize_image, rfftn\n",
     "\n",
     "\n",
@@ -113,14 +113,14 @@
     "    shape, pixel_size, voltage_in_kilovolts, padded_shape=potential.shape[0:2]\n",
     ")\n",
     "\n",
-    "parameter_reader = RelionParticleParameterReader(\n",
+    "parameter_dataset = RelionParticleParameterDataset(\n",
     "    path_to_starfile=\"./data/ribosome_4ug0_particles.star\",\n",
     "    path_to_relion_project=\"./\",\n",
     "    make_config_fn=make_config_fn,\n",
     "    broadcasts_optics_group=True,\n",
     ")\n",
-    "particle_reader = RelionParticleStackReader(parameter_reader)\n",
-    "particle_stack = particle_reader[:3]\n",
+    "particle_dataset = RelionParticleStackDataset(parameter_dataset)\n",
+    "particle_stack = particle_dataset[:3]\n",
     "# Create a normalized image stack in fourier space\n",
     "fourier_image_stack = rfftn(normalize_image_stack(particle_stack.images), axes=(1, 2))\n",
     "# Plot images\n",
