--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pose = cxs.EulerAnglePose(\n",
     "    offset_x_in_angstroms=12.0,\n",
     "    offset_y_in_angstroms=-14.0,\n",
-    "    view_theta=90.0,\n",
-    "    view_psi=20.0,\n",
-    "    view_phi=0.0,\n",
+    "    theta_angle=90.0,\n",
+    "    psi_angle=20.0,\n",
+    "    phi_angle=0.0,\n",
     ")\n",
     "# structural_ensemble = cxs.SingleStructureEnsemble(voxel_potential, pose)\n",
     "structural_ensemble = cxs.SingleStructureEnsemble(atom_potential, pose)\n",
