compute_fourier_integrated_potential -> compute_integrated_potential

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +184,6 @@
    "source": [
     "import jax\n",
     "\n",
-    "from cryojax.image import irfftn\n",
-    "\n",
     "\n",
     "@jax.jit\n",
     "def compute_projection(potential):\n",
@@ -199,12 +197,10 @@
     "        voltage_in_kilovolts=300.0,\n",
     "    )\n",
     "    # ... compute the integrated potential\n",
-    "    fourier_integrated_potential = (\n",
-    "        potential_integrator.compute_fourier_integrated_potential(\n",
-    "            potential, instrument_config\n",
-    "        )\n",
+    "    integrated_potential = potential_integrator.compute_integrated_potential(\n",
+    "        potential, instrument_config, outputs_real_space=True\n",
     "    )\n",
-    "    return irfftn(fourier_integrated_potential, s=instrument_config.shape)\n",
+    "    return integrated_potential\n",
     "\n",
     "\n",
     "# Load the voxel grid into a voxel-based potential representation\n",
